--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,15 @@
   justify-content: space-around;
   align-items: center;
   min-height: 100px;
-  margin-top: 10px;
-  font-size: 1.2em;
+  margin: 10px 20px;
+  font-size: 1em;
+  background-image: none;
 }
 
 .logo {
   display: block;
   position: absolute;
-  height: 100px;
+  height: 80px;
 }
 
 .inputContainer {
@@ -27,7 +28,7 @@
 }
 
 .input {
-  font-size: 1em;
+  font-size: 0.9em;
   padding: 5px;
 }
 
@@ -38,12 +39,12 @@
   justify-content: center;
   align-items: center;
   margin: 10px 20px;
-  height: 160px;
+  height: 120px;
   overflow-y: scroll;
 }
 
 .routes {
-  font-size: 1.2em;
+  font-size: 0.9em;
   border: 1px solid black;
   border-radius: 10px;
   box-shadow: 3px 3px 5px rgba(230, 0, 18, 0.8);
@@ -76,6 +77,7 @@
   margin: 5px;
   padding: 10px;
   width: 19%;
+  font-size: 0.9em;
 }
 
 .firstBus {
@@ -108,16 +110,13 @@
   .lastUpdateTime {
     order: 1;
   }
-  /* .busDataContainer {
-    flex-direction: column;
-  } */
   .buses {
-    width: 25%;
+    width: 30%;
   }
 }
 
 @media (width < 720px) {
   .buses {
-    width: 40%;
+    width: 45%;
   }
 }
